# fastapi-async-starter

./: .env.example  .env.local  .gitignore  LICENSE  Makefile  README.md  alembic.ini  compose.local.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
backend/: Dockerfile  Makefile  README.md
backend/alembic/versions/: 0001_initial.py
backend/src/: main.py  router.py
backend/src/auth/: utils.py
backend/src/core/: config.py
backend/src/db/: engine.py  seed.py
backend/src/extensions/: error_handlers.py  lifespan.py  logs.py
backend/src/modules/items/: dependencies.py  exceptions.py  router.py  schemas.py
backend/src/services/: mailer.py
backend/src/users/: dependencies.py  exceptions.py  models.py  router.py
backend/src/workers/: settings.py
backend/tests/items/: test_items.py
backend/tests/test_infrastructure/: test_mailer.py
backend/tests/test_items/: test_items.py
backend/tests/test_services/: test_mailer.py
backend/tests/test_users/: test_users.py
src/: main.py
src/auth/: config.py  exceptions.py  schemas.py
src/core/: config.py  exceptions.py
src/db/: models.py  seed.py
src/extensions/: middleware.py
src/modules/items/: models.py  service.py
src/users/: dependencies.py  router.py  schemas.py  service.py
src/workers/: tasks.py
tests/: conftest.py  test_main.py
tests/test_auth/: test_auth.py
tests/test_core/: test_constants.py
tests/test_extensions/: test_logs.py
